# awesome-claude-skills

./: README.md
creator-squad/: .gitignore  CLAUDE.md  SKILL.md  pyproject.toml
creator-squad/framework/: __init__.py
creator-squad/framework/agents/architect/: system_prompt.md
creator-squad/framework/agents/eval_engineer/: system_prompt.md
creator-squad/framework/agents/orchestrator/: system_prompt.md
creator-squad/framework/agents/prompt_engineer/: system_prompt.md
creator-squad/framework/agents/tool_builder/: system_prompt.md
creator-squad/framework/core/: __init__.py  handoff.py  orchestrator.py  runner.py  state.py
creator-squad/framework/schemas/: agent_spec.py
creator-squad/framework/shared/: tools.py
creator-squad/scripts/: monitor-squad.sh  spawn-squad.sh
creator-squad/workflows/: orchestrate.yml
greenfield-project-setup/: SKILL.md
